--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptr-token",
-  "version": "1.0.0",
-  "description": "cryptr is a simple aes-256-ctr token module for node.js",
+  "version": "1.0.1",
+  "description": "cryptr-token is a simple aes-256-ctr token module for node.js",
   "main": "index.js",
   "directories": {
     "test": "test"
